--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,65 @@
-# .gitignore
+# Byte-compiled / cache files
 __pycache__/
-*.pyc
-*.pyo
-*.pyd
-*.log
-*.gz
-.env
-.venv/
-dist/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
 build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
 *.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual environments
+.venv/
+venv/
+ENV/
+env/
+.venv*/
+
+# Logs and coverage
+*.log
+*.out
+*.err
+coverage/
+.tox/
+.nox/
+.pytest_cache/
+.coverage
+*.cover
+*.py,cover
+.hypothesis/
+
+# Editors / IDE
+.vscode/
+.idea/
+*.swp
+
+# Data / artifacts
+*.gz
+*.zip
+*.tar
+*.bak
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Local environment
+.env
+.env.*
